@startuml
hide empty methods
hide empty fields
class "Task" {
    +content : T
    +id : string
    +status : ETaskStatus
    -setStatus(s: ETaskStatus) : void
    +toggle() : void
}
interface "ITaskItem" {
    +content : TaskContentType
    +id : string
    +status : ETaskStatus
    +toggle() : void
}
"ITaskItem" <|.. "Task"
class "PeriodTask" {
    +content : T
    +finishDate : Date | null
    +id : string
    +status : ETaskStatus
    +toggle() : void
}
"Task" <|-- "PeriodTask"
@enduml